--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
     "vuetify": "^2.3.19",
-    "vuex": "^3.6.0"
+    "vuex": "^3.6.0",
+    "ws": "1.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
